--- a/main.css
+++ b/main.css
@@ -56,7 +56,7 @@ header > div{
 }
 main > header > div:nth-child(3) > div:nth-child(2){
     margin-left:30px;
-    background: rgb(139, 86, 5);
+    /* background: rgb(139, 86, 5); */
     width:570px;
 }
 article{
@@ -110,4 +110,7 @@ article > .first > ul{
 }
 h2{
     margin:3%;
+}
+p{
+    margin:1%;
 }
